feat: JSON schema validation